# esp32_c3_rust_atomic_battery

./: .gitignore  Cargo.toml  README.md
docs/: kv_store.md  led_indicator.md  logic.ods  nfc_tag.md  segment_display.md  wiring.md
docs/schematic/: wiring.py
src/: app.rs  lib.rs  main.rs  nfc_tag.rs  segment_display.rs
src/app/: demo.rs  error.rs  runtime.rs
src/common/: lib.rs
src/common/drivers/: led_indicator.rs  mod.rs  nfc_tag.rs  segment_display.rs
src/common/drivers/led_indicator/: async_controller.rs  backend.rs  constants.rs  digital_backend.rs  easing.rs  mod.rs  pattern.rs  pwm_backend.rs
src/common/drivers/nfc_tag/: async.rs  async_nfc.rs  constants.rs  esp_idf.rs  format.rs  mod.rs  sync.rs
src/common/drivers/segment_display/: async_display.rs  constants.rs  frame.rs  mod.rs  sync_display.rs  types.rs  worker.rs
src/common/utils/: atomic_tags.rs  kv_store.rs  mod.rs
src/drivers/: nfc_tag.rs  segment_display.rs
