[package]
name = "esp32_c3_rust_atomic_battery"
version = "0.1.0"
authors = ["Michael Brylevskii <michael.brylevskii@gmail.com>"]
description = "ESP32-C3 Rust firmware for an NFC-based atomic battery RPG device, developed with substantial Codex assistance."
edition = "2021"
resolver = "2"
rust-version = "1.82"
license = "0BSD"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "app"
path = "src/bin/app/main.rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name = "display_demo"
path = "src/bin/display_demo/main.rs"
harness = false

[[bin]]
name = "led_indicator_demo"
path = "src/bin/led_indicator_demo/main.rs"
harness = false

[[bin]]
name = "battery_tag_demo"
path = "src/bin/battery_tag_demo/main.rs"
harness = false

[[bin]]
name = "service_tag_demo"
path = "src/bin/service_tag_demo/main.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
tm1637-embedded-hal = "0.5"
pn532 = "0.5"
ndef = "0.5"

[build-dependencies]
embuild = "0.33"
